@@ -6,12 +6,12 @@ export("Rdindex",
        "codoc", "codocClasses", "codocData", "md5sum", "undoc",
        "file_path_as_absolute", "file_path_sans_ext",
        "list_files_with_exts", "list_files_with_type", "showNonASCII",
-       "delimMatch", "parse_Rd", "Rd2HTML", 
+       "delimMatch", "parse_Rd", "Rd2HTML",
        "texi2dvi", "buildVignettes", "pkgVignettes", "pkgDepends",
        "getDepList", "installFoundDepends", "vignetteDepends",
        "write_PACKAGES", "xgettext", "xgettext2pot", "xngettext",
        "encoded_text_to_latex", "charset_to_Unicode", "Adobe_glyphs",
-       "checkNEWS", "readNEWS")
+       "checkNEWS", "readNEWS", "dependsOnPkgs")
 
 export("Rd_db", "Rd_parse", "package.dependencies", "read.00Index")
 
